// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App tests for user account and author status User is logged in but are still loading authorDetails) 1`] = `
<div
  className="layout-fill"
>
  <div
    className="layout-fill align-stretch"
  >
    <AppBar
      className="AppBar align-center"
      iconElementRight={
        <div
          style={
            Object {
              "marginTop": "-10px",
            }
          }
        >
          <AuthButton
            isAuthorizedUser={true}
            loginUrl="https://auth.library.uq.edu.au/login"
            logoutUrl="https://auth.library.uq.edu.au/logout"
            signInTooltipText="Log in"
            signOutTooltipText="Log out - J STAFF"
          />
        </div>
      }
      iconStyleLeft={
        Object {
          "marginTop": 0,
        }
      }
      onLeftIconButtonTouchTap={[Function]}
      showMenuIconButton={true}
      style={
        Object {
          "height": 75,
        }
      }
      title="UQ eSpace"
      titleStyle={Object {}}
      zDepth={1}
    />
    <MenuDrawer
      docked={false}
      drawerOpen={false}
      logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
      logoText="UQ eSpace"
      menuItems={
        Array [
          Object {
            "linkTo": "/dashboard",
            "primaryText": "My dashboard",
            "secondaryText": "j.staff@example.uq.edu.au",
          },
          Object {
            "linkTo": "/records/mine",
            "primaryText": "My research",
          },
          Object {
            "linkTo": "/records/add/find",
            "primaryText": "Add a missing record",
          },
          Object {
            "linkTo": "/records/possible",
            "primaryText": "Claim possible publications",
          },
          Object {
            "divider": true,
            "path": "/234234234242",
          },
          Object {
            "linkTo": "/admin/masquerade",
            "primaryText": "Masquerade",
            "secondaryText": "as another user",
          },
          Object {
            "linkTo": "/admin/permissions",
            "primaryText": "Permissions",
            "secondaryText": "manage permissions",
          },
          Object {
            "divider": true,
            "path": "/234234234242",
          },
          Object {
            "linkTo": "/browse",
            "primaryText": "Browse",
            "public": true,
            "secondaryText": "UQ's digital repository",
          },
          Object {
            "linkTo": "/about",
            "primaryText": "About",
            "public": true,
            "secondaryText": undefined,
          },
        ]
      }
      toggleDrawer={[Function]}
    />
    <div
      className="content-container"
      style={Object {}}
    >
      <Switch>
        <Route
          path="/about"
          render={[Function]}
        />
        <Route
          path="/browse"
          render={[Function]}
        />
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/dashboard"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/mine"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/possible"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/claim"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/find"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/results"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/new"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/admin/masquerade"
        />
        <Route
          access={
            Array [
              "admin",
            ]
          }
          exact={true}
          path="/admin/permissions"
          render={[Function]}
        />
        <Route
          render={[Function]}
        />
      </Switch>
    </div>
    <Connect(HelpDrawer) />
  </div>
</div>
`;

exports[`App tests for user account and author status User is not logged in and is not an author) 1`] = `
<div
  className="layout-fill"
>
  <div
    className="layout-fill align-stretch"
  >
    <AppBar
      className="AppBar align-center"
      iconElementRight={
        <div
          style={
            Object {
              "marginTop": "-10px",
            }
          }
        >
          <AuthButton
            isAuthorizedUser={false}
            loginUrl="https://auth.library.uq.edu.au/login"
            logoutUrl="https://auth.library.uq.edu.au/logout"
            signInTooltipText="Log in"
            signOutTooltipText=""
          />
        </div>
      }
      iconStyleLeft={
        Object {
          "marginTop": 0,
        }
      }
      onLeftIconButtonTouchTap={[Function]}
      showMenuIconButton={true}
      style={
        Object {
          "height": 75,
        }
      }
      title="UQ eSpace"
      titleStyle={Object {}}
      zDepth={1}
    />
    <MenuDrawer
      docked={false}
      drawerOpen={false}
      logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
      logoText="UQ eSpace"
      menuItems={
        Array [
          Object {
            "linkTo": "/browse",
            "primaryText": "Browse",
            "public": true,
            "secondaryText": "UQ's digital repository",
          },
          Object {
            "linkTo": "/about",
            "primaryText": "About",
            "public": true,
            "secondaryText": undefined,
          },
        ]
      }
      toggleDrawer={[Function]}
    />
    <div
      className="content-container"
      style={Object {}}
    >
      <div
        className="layout-fill"
      >
        <div
          className="layout-card"
        >
          <Alert
            allowDismiss={false}
            message="Please, login to UQ eSpace for full search results and more services."
            title="You are not logged in"
            type="info_outline"
          />
        </div>
      </div>
      <Switch>
        <Route
          path="/about"
          render={[Function]}
        />
        <Route
          path="/browse"
          render={[Function]}
        />
        <Route
          exact={true}
          path="/"
          render={[Function]}
        />
        <Route
          render={[Function]}
        />
      </Switch>
    </div>
    <Connect(HelpDrawer) />
  </div>
</div>
`;

exports[`App tests for user account and author status User logged in and is an author) 1`] = `
<div
  className="layout-fill"
>
  <div
    className="layout-fill align-stretch"
  >
    <AppBar
      className="AppBar align-center"
      iconElementRight={
        <div
          style={
            Object {
              "marginTop": "-10px",
            }
          }
        >
          <AuthButton
            isAuthorizedUser={true}
            loginUrl="https://auth.library.uq.edu.au/login"
            logoutUrl="https://auth.library.uq.edu.au/logout"
            signInTooltipText="Log in"
            signOutTooltipText="Log out - J STAFF"
          />
        </div>
      }
      iconStyleLeft={
        Object {
          "marginTop": 0,
        }
      }
      onLeftIconButtonTouchTap={[Function]}
      showMenuIconButton={true}
      style={
        Object {
          "height": 75,
        }
      }
      title="UQ eSpace"
      titleStyle={Object {}}
      zDepth={1}
    />
    <MenuDrawer
      docked={false}
      drawerOpen={false}
      logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
      logoText="UQ eSpace"
      menuItems={
        Array [
          Object {
            "linkTo": "/dashboard",
            "primaryText": "My dashboard",
            "secondaryText": "j.staff@example.uq.edu.au",
          },
          Object {
            "linkTo": "/records/mine",
            "primaryText": "My research",
          },
          Object {
            "linkTo": "/records/add/find",
            "primaryText": "Add a missing record",
          },
          Object {
            "linkTo": "/records/possible",
            "primaryText": "Claim possible publications",
          },
          Object {
            "divider": true,
            "path": "/234234234242",
          },
          Object {
            "linkTo": "/admin/masquerade",
            "primaryText": "Masquerade",
            "secondaryText": "as another user",
          },
          Object {
            "linkTo": "/admin/permissions",
            "primaryText": "Permissions",
            "secondaryText": "manage permissions",
          },
          Object {
            "divider": true,
            "path": "/234234234242",
          },
          Object {
            "linkTo": "/browse",
            "primaryText": "Browse",
            "public": true,
            "secondaryText": "UQ's digital repository",
          },
          Object {
            "linkTo": "/about",
            "primaryText": "About",
            "public": true,
            "secondaryText": undefined,
          },
        ]
      }
      toggleDrawer={[Function]}
    />
    <div
      className="content-container"
      style={Object {}}
    >
      <Switch>
        <Route
          path="/about"
          render={[Function]}
        />
        <Route
          path="/browse"
          render={[Function]}
        />
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/dashboard"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/mine"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/possible"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/claim"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/find"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/results"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/new"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/admin/masquerade"
        />
        <Route
          access={
            Array [
              "admin",
            ]
          }
          exact={true}
          path="/admin/permissions"
          render={[Function]}
        />
        <Route
          render={[Function]}
        />
      </Switch>
    </div>
    <Connect(HelpDrawer) />
  </div>
</div>
`;

exports[`App tests for user account and author status User logged in but is not an author) 1`] = `
<div
  className="layout-fill"
>
  <div
    className="layout-fill align-stretch"
  >
    <AppBar
      className="AppBar align-center"
      iconElementRight={
        <div
          style={
            Object {
              "marginTop": "-10px",
            }
          }
        >
          <AuthButton
            isAuthorizedUser={true}
            loginUrl="https://auth.library.uq.edu.au/login"
            logoutUrl="https://auth.library.uq.edu.au/logout"
            signInTooltipText="Log in"
            signOutTooltipText="Log out - J STAFF"
          />
        </div>
      }
      iconStyleLeft={
        Object {
          "marginTop": 0,
        }
      }
      onLeftIconButtonTouchTap={[Function]}
      showMenuIconButton={true}
      style={
        Object {
          "height": 75,
        }
      }
      title="UQ eSpace"
      titleStyle={Object {}}
      zDepth={1}
    />
    <MenuDrawer
      docked={false}
      drawerOpen={false}
      logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
      logoText="UQ eSpace"
      menuItems={
        Array [
          Object {
            "linkTo": "/dashboard",
            "primaryText": "My dashboard",
            "secondaryText": "j.staff@example.uq.edu.au",
          },
          Object {
            "linkTo": "/records/mine",
            "primaryText": "My research",
          },
          Object {
            "linkTo": "/records/add/find",
            "primaryText": "Add a missing record",
          },
          Object {
            "linkTo": "/records/possible",
            "primaryText": "Claim possible publications",
          },
          Object {
            "divider": true,
            "path": "/234234234242",
          },
          Object {
            "linkTo": "/admin/masquerade",
            "primaryText": "Masquerade",
            "secondaryText": "as another user",
          },
          Object {
            "linkTo": "/admin/permissions",
            "primaryText": "Permissions",
            "secondaryText": "manage permissions",
          },
          Object {
            "divider": true,
            "path": "/234234234242",
          },
          Object {
            "linkTo": "/browse",
            "primaryText": "Browse",
            "public": true,
            "secondaryText": "UQ's digital repository",
          },
          Object {
            "linkTo": "/about",
            "primaryText": "About",
            "public": true,
            "secondaryText": undefined,
          },
        ]
      }
      toggleDrawer={[Function]}
    />
    <div
      className="content-container"
      style={Object {}}
    >
      <div
        className="layout-fill"
      >
        <div
          className="layout-card"
        >
          <Alert
            allowDismiss={false}
            message="Please contact the UQ Manager to resolve this."
            title="You are not registered in UQ eSpace as an author"
            type="info_outline"
          />
        </div>
      </div>
      <Switch>
        <Route
          path="/about"
          render={[Function]}
        />
        <Route
          path="/browse"
          render={[Function]}
        />
        <Route
          component={[Function]}
          exact={true}
          path="/"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/dashboard"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/mine"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/possible"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/records/claim"
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/find"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/results"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "researcher",
              "admin",
            ]
          }
          exact={true}
          path="/records/add/new"
          render={[Function]}
        />
        <Route
          access={
            Array [
              "admin",
            ]
          }
          component={[Function]}
          exact={true}
          path="/admin/masquerade"
        />
        <Route
          access={
            Array [
              "admin",
            ]
          }
          exact={true}
          path="/admin/permissions"
          render={[Function]}
        />
        <Route
          render={[Function]}
        />
      </Switch>
    </div>
    <Connect(HelpDrawer) />
  </div>
</div>
`;
